# rust-binding-example

./: .clang-format  .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  env.mk  global.env  justfile
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: test-cmake-versions.yml  test-linux-aarch64.yml  test.yml
cpp/hello/: .crates.toml  .gitignore  CMakeLists.txt  Cargo.toml  Makefile.toml  build.rs  cbindgen.toml  justfile  justfile-cdylib  justfile-staticlib
cpp/hello-cbindgen/: Cargo.toml  build.rs  justfile  justfile-cdylib  justfile-staticlib
cpp/hello-cbindgen/hello/include/hello/: callback.hpp  error.hpp  string.hpp  structure.hpp
cpp/hello-cbindgen/src/: array.rs  callback.rs  lib.rs  string.rs
cpp/hello-cbindgen/tests/: CMakeLists.txt  test_error.cpp  test_string.cpp  test_structure.cpp
cpp/hello-cdylib/: .gitignore  Cargo.toml  justfile
cpp/hello-cdylib/src/: lib.rs
cpp/hello-cxx/: Cargo.toml
cpp/hello-dynamic/: Cargo.toml
cpp/hello-static/: Cargo.toml
cpp/hello-staticlib/: Cargo.toml  justfile
cpp/hello/hello/include/: array.hpp  callback.hpp  error.hpp  hello.hpp  string.hpp
cpp/hello/hello/include/hello/: callback.hpp  error.hpp  structure.hpp
cpp/hello/src/: array.rs  callback.rs  error.rs  errors.rs  lib.rs  string.rs  structure.rs
cpp/hello/tests/: CMakeLists.txt  main.cpp  test_array.cpp  test_callback.cpp  test_error.cpp  test_hello.cpp  test_hello_c.cpp  test_hello_cpp.cpp  test_string.cpp  test_structure.cpp
nodejs/hello/: .gitignore  Cargo.toml  Makefile.toml  index.js  package-lock.json  package.json
nodejs/hello-napi/: .gitignore  Cargo.toml  Makefile.toml  justfile  package-lock.json  package.json
nodejs/hello-napi/__tests__/: test_string.js
nodejs/hello-napi/src/: array.rs
nodejs/hello-neon/: Cargo.toml  Makefile.toml  README.md  justfile  package-lock.json  package.json
nodejs/hello-neon/__tests__/: test_array.js  test_hello.js
nodejs/hello-neon/src/: array.rs  error.rs  lib.rs  string.rs
nodejs/hello/__tests__/: test_array.js  test_callback.js  test_error.js  test_hello.js  test_string.js
nodejs/hello/npm/darwin-x64/: package.json
nodejs/hello/npm/linux-x64-gnu/: package.json
nodejs/hello/npm/win32-x64-msvc/: package.json
nodejs/hello/src/: array.rs  callback.rs  error.rs  lib.rs  string.rs
python/hello/: .gitignore  Cargo.toml  Makefile  Makefile.toml  justfile  post_build.rs  pyproject.toml
python/hello/binding/: Cargo.toml  Makefile
python/hello/binding/src/: lib.rs
python/hello/src/: array.rs  callback.rs  error.rs  errors.rs  lib.rs  string.rs
python/hello/tests/: test_array.py  test_callback.py  test_error.py  test_hello.py  test_string.py
rust/greeting/: Cargo.toml  Makefile
rust/greeting/src/: lib.rs
rust/hello/: Cargo.toml  Makefile
rust/hello/src/: array.rs  callback.rs  error.rs  lib.rs  string.rs  struct.rs  structure.rs
wasm/hello/: .gitignore  Cargo.toml  init-page.js  jest-puppeteer.config.js  justfile  package-lock.json  package.json
wasm/hello-emscripten/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  emsdk.cmake  justfile  pre.js
wasm/hello-emscripten/src/: array.cpp  callback.cpp  error.cpp  lib.cpp  lib.rs  string.cpp
wasm/hello-emscripten/tests/: init-page.js  jest-puppeteer.config.js  jest.config.js  package-lock.json  package.json
wasm/hello-emscripten/tests/__tests__/: test.js  test_array.js  test_callback.js  test_error.js  test_string.js
wasm/hello-wasm-pack/: Cargo.toml  justfile
wasm/hello-wasm-pack/src/: array.rs  callback.rs  error.rs  string.rs
wasm/hello-wasm-pack/tests/: init-page.js  package-lock.json  package.json
wasm/hello-wasm-pack/tests/__tests__/: test_array.js  test_callback.js  test_error.js  test_string.js
wasm/hello/__tests__/: test_array.js  test_error.js  test_string.js
wasm/hello/src/: array.rs  callback.rs  lib.rs  string.rs
wasm/hello/tests/: jest-puppeteer.config.js  package-lock.json
wasm/hello/tests/__tests__/: test_callback.js  test_error.js
