[package]
name = "hello-nodejs"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
hello = { path = "../../rust/hello" }
thiserror = "1.0"

[build-dependencies]
napi-build = "2"
