[package]
name = "hello_python"
version = "0.1.0"
authors = ["krazijames <krazijames@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hello_python"
crate-type = ["cdylib"]

[dependencies]
hello = {path = "../../rust/hello"}

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]
