[package]
name = "hello-python"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0"
hello = { path = "../../rust/hello" }

[dependencies.pyo3]
version = "0.18"
features = ["extension-module"]
