[package]
name = "hello"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
